--- a/CÓDIGOS/principal.html
+++ b/CÓDIGOS/principal.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 <head>
 	<meta charset="utf-8">
@@ -17,13 +16,30 @@
 			<source src="C:\xampp\htdocs\Anoca\FETEC\CÓDIGOS\fetec.mp4" type="video/mp4">
 		</video>
 	</div>
-	<div class="container">
-		<img src="C:\xampp\htdocs\Anoca\FETEC\CÓDIGOS\meickS.oN.png" width="300px">
-		<p class="parag" class="karla" >
-			Cinco Noites no CETEP" é um jogo de terror e comédia onde você assume o papel de um vigilante noturno em uma escola comum...até anoitecer. Sua missão é sobreviver cinco noites enquanto é perseguido pelo espírito vingativo de Meick S.O.N, um ex-professor que transformou os corredores em seu playground de terror. Entre sustos e risos sinistros, você precisa monitorar câmeras, fechar portas e gerenciar sua energia para escapar das "aulas noturnas" de Meick e se manter vivo até o amanhecer.
+	<div class="container"
+		data-aos="fade-up"
+		data-aos-delay="300"
+		data-aos-duration="800"
+		data-aos-easing="ease-in-out">
+		<img 
+		src="C:\xampp\htdocs\Anoca\FETEC\CÓDIGOS\JLB.png" 
+		width="300px">
+		<p class="parag" class="karla"
+		data-aos="fade-up"
+		data-aos-delay="300"
+		data-aos-duration="800"
+		data-aos-easing="ease-in-out">
+			Cinco Noites no CETEP" é um jogo de terror e comédia onde você assume o papel de um vigilante noturno em uma escola comum...até anoitecer. Sua missão é sobreviver cinco noites enquanto é perseguido por espíritos vingativos, Breno, Lucas e Jhon, ex-professores que transformaram os corredores em seu playground de terror. Entre sustos e risos sinistros, você precisa monitorar câmeras, fechar portas e gerenciar sua energia para escapar das "aulas noturnas" e se manter vivo até o amanhecer.
 		</p>
-		<div class="buttons">
+		<div
+		data-aos="fade-up"
+		data-aos-delay="300"
+		data-aos-duration="800"
+		data-aos-easing="ease-in-out"
+		class="buttons">
+		<a href="secundaria.html">
 			<button class="saiba-mais">Saiba mais</button>
+		</a>
 			<button class="download">Download</button>
 		</div>
 	</div>
