--- a/index.html
+++ b/index.html
@@ -36,54 +36,52 @@
 		</div>
 	</section>
 	<section class="section-two">
-		<img src="public/img/sobreoprojeto.png" alt="sobreoprojeto" width="300px">
+		<img src="public/img/sobreoprojeto.png" alt="sobreoprojeto" width="350px">
 		<div class="container">
 			<div class="info__container">
 				<article class="info__article">
 					<img src="public/img/fetec.png" alt="image" class="info__img">
 					<div class="info__data">
+						<h2 class="info__title">FETEC</h2>
 						<span class="info__description">Laboratório Gadget do futuro, Membro 002</span>
-						<h2 class="info__title">Mayuri</h2>
-						<a href="#" class="info__button">Saiba mais</a>
+						<a href="#" class="info__button">Saiba mais na WIKI</a>
 					</div>
 				</article>
 				<article class="info__article">
 					<img src="public/img/site.png" alt="image" class="info__img">
 
 					<div class="info__data">
+						<h2 class="info__title">SITE</h2>
 						<span class="info__description">Laboratório Gadget do futuro, Membro 004</span>
-						<h2 class="info__title">Kurisu</h2>
-						<a href="#" class="info__button">Saiba mais</a>
+						<a href="#" class="info__button">Saiba mais na WIKI</a>
 					</div>
 				</article>
 				<article class="info__article">
 					<img src="public/img/jogo.png" alt="image" class="info__img">
 
 					<div class="info__data">
+						<h2 class="info__title">JOGO</h2>
 						<span class="info__description">Laboratório Gadget do futuro, Membro 008</span>
-						<h2 class="info__title">Suzuha</h2>
-						<a href="#" class="info__button">Saiba mais</a>
+						<a href="#" class="info__button">Saiba mais na WIKI</a>
 					</div>
 				</article>
 			</div>
 		</div>
 	</section>
 	<section class="section-three">
-		<h2 class="container__title">Animatronics</h2>
+		<div id="animatronics">
+			<img src="public/img/animatronics.png" alt="animatronics" width="500px">
+		</div>
 		<div class="card__container">
 			<article>
 				<div class="card__product">
-					<img src="assets/img/card-img-1.png" alt="image" class="card__img">
-
-					<div>
-						<h3 class="card__name">Personagem 1</h3>
-					</div>
+					<img src="public/img/8rEn0.png" alt="breno" class="card__img"> 
 				</div>
 				<div class="modal">
 					<div class="modal__card">
 						<i class="ri-close-large-line modal__close"></i>
 
-						<img src="assets/img/card-img-1.png" alt="image" class="modal__img">
+						<img src="public/img/modal8reno.png" alt="image" class="modal__img">
 
 						<div>
 							<h3 class="modal__name">Personagem 1</h3>
@@ -96,15 +94,12 @@
 			</article>
 			<article>
 				<div class="card__product">
-					<img src="assets/img/card-img-2.png" alt="image" class="card__img">
-					<div>
-						<h3 class="card__name">Personagem 2</h3>
-					</div>
+					<img src="public/img/lVk4s.png" alt="image" class="card__img">
 				</div>
 				<div class="modal">
 					<div class="modal__card">
 						<i class="ri-close-large-line modal__close"></i>
-						<img src="assets/img/card-img-2.png" alt="image" class="modal__img">
+						<img src="public/img/modaluk4s.png" alt="image" class="modal__img">
 						<div>
 							<h3 class="modal__name">Personagem 2</h3>
 							<p class="modal__info">
@@ -116,15 +111,12 @@
 			</article>
 			<article>
 				<div class="card__product">
-					<img src="assets/img/card-img-3.png" alt="image" class="card__img">
-					<div>
-						<h3 class="card__name">Personagem 3</h3>
-					</div>
+					<img src="public/img/jh0n.png" alt="image" class="card__img">
 				</div>
 				<div class="modal">
 					<div class="modal__card">
 						<i class="ri-close-large-line modal__close"></i>
-						<img src="assets/img/card-img-3.png" alt="image" class="modal__img">
+						<img src="public/img/modaljh0n.png" alt="image" class="modal__img">
 						<div>
 							<h3 class="modal__name">Personagem 3</h3>
 							<p class="modal__info">
@@ -136,10 +128,7 @@
 			</article>
 			<article>
 				<div class="card__product">
-					<img src="assets/" alt="image" class="card__img">
-					<div>
-						<h3 class="card__name">Personagem 4</h3>
-					</div>
+					<img src="public/img/meickSON.png" alt="image" class="card__img">
 				</div>
 				<div class="modal">
 					<div class="modal__card">
@@ -156,10 +145,7 @@
 			</article>
 			<article>
 				<div class="card__product">
-					<img src="assets/img/card-img-5.png" alt="image" class="card__img">
-					<div>
-						<h3 class="card__name">Personagem 5</h3>
-					</div>
+					<img src="public/img/shad0w.png" alt="image" class="card__img">
 				</div>
 				<div class="modal">
 					<div class="modal__card">
@@ -176,10 +162,7 @@
 			</article>
 			<article>
 				<div class="card__product">
-					<img src="assets/img/card-img-6.png" alt="image" class="card__img">
-					<div>
-						<h3 class="card__name">Personagem 6</h3>
-					</div>
+					<img src="public/img/you.png" alt="image" class="card__img">
 				</div>
 				<div class="modal">
 					<div class="modal__card">
@@ -197,9 +180,20 @@
 		</div>
 	</section>
 	<section class="section-four">
-		<button>
-			Download
-		</button>
+		<img src="public/img/baixeaqui.jpg" alt="baixeaqui" width="300px">
+		<div class="container">
+			<button>
+				DOWLOAND
+			</button>
+		</div>
+		<div>
+			<h3>CONFIGURAÇÕES NECESSÁRIAS</h3>
+			<p></p>
+		</div>
+		<div>
+			<h3>CONFIGURAÇÕES RECOMENDADAS</h3>
+			<p></p>
+		</div>
 	</section>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script>
